Fix the board button height issue on Safari

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -89,7 +89,7 @@
     border-radius: 10px;
     background-color: #EFEFEF;
     display: flex;
-    height:100%;
+    flex-grow: 1;
     align-items: center;
     justify-content: center;
     transition: ease-out 0.15s;
